k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-smtp-relay
spec:
  replicas: 1
  selector:
    matchLabels: { app: py-smtp-relay }
  template:
    metadata:
      labels: { app: py-smtp-relay }
    spec:
      containers:
        - name: app
          image: Agile-Software-Engineering-25/py-smtp-relay:latest
          ports:
            - containerPort: 2525
          readinessProbe:
            tcpSocket: { port: 25 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 25 }
            initialDelaySeconds: 10
            periodSeconds: 20
