k8s/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smtp-from-namespaces
spec:
  podSelector:
    matchLabels:
      app: py-smtp-relay
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access-smtp-relay: "true"
      ports:
        - protocol: TCP
          port: 25
